--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/cssinjs": "^1.18.2",
-    "antd": "^5.12.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "latest",
+    "@nextui-org/react": "^2.2.9",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
     "i18next": "^23.7.12",
     "next": "14.0.4",
     "next-i18next": "^15.1.1",
