--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-i18next": "^15.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^14.0.0"
+    "react-i18next": "^14.0.0",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/node": "^20",
