--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.0.0",
+    "react-markdown": "^9.0.1",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
