--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18",
     "react-i18next": "^14.0.0",
     "react-markdown": "^9.0.1",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^10.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
